# OpenPyTEA

./: .gitignore  CITATION.cff  GUI_ARCHITECTURE.md  PACKAGING.md  README.md  TAURI_PACKAGING_PLAN.md  analysis.py  cost_correlations.py  equipment.py  pyproject.toml  start.sh  tea.py  tea_walkthrough.ipynb  walkthrough.ipynb
.github/workflows/: build-desktop.yml  python-package.yml  python-publish.yml
backend/: openpytea-backend.spec  openpytea_backend.py  pyproject.toml
backend/app/: main.py  schemas.py  util.py
backend/app/presets/: h2_electrolysis.json  h2_methane_pyrolysis.json  h2_smr.json  lh2_smr_best.json
backend/app/routers/: analysis.py  equipment.py  io.py  plant.py
case_studies/: case_study_1.ipynb
data/: cepci_values.csv  cost_correlations.csv
docs/: citation.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_build/doctrees/: citation.doctree  environment.pickle  examples.doctree  gui.doctree  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  citation.html  contributing.html  examples.html  genindex.html  gui.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorials.html
docs/_static/: custom.css
docs/user_guide/: analysis.rst  io_workflow.rst  plotting.rst
examples/: case_study_1.ipynb  case_study_1_with_JSON.ipynb  case_study_2.ipynb  case_study_3.ipynb
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: client.ts
scripts/: build_sidecar.py  patch_macos_plist.py
src/OpenPyTEA.egg-info/: SOURCES.txt
src/openpytea/: __init__.py  analysis.py  equipment.py  helpers.py  io.py  plant.py  plotting.py
tests/: conftest.py  test_analysis.py  test_plant.py  test_plotting.py  test_smoke.py
tutorial_videos/: index.html  tutorial_03_performing_analysis.ipynb
(+66 files in other folders)
