[project]
name = "openpytea"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "scienceplots==2.1.1",
    "scipy==1.16.2",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
ipython = [
    "ipython==9.6.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"