[project]
name = "openpytea"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scienceplots>=2.2.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
ipython = [
    "ipython==9.6.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
