[project]
name = "OpenPyTEA"
version = "1.2.0"
description = "OpenPyTEA: An open-source python toolkit for techno-economic assessment of process plants with economic sensitivity and uncertainty evaluation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "chemical-engineering",
    "process-design",
    "power-plant",
    "techno-economic-analysis",
    "process-plant",
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scienceplots>=2.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
maintainers = [
  {name = "Panji B. Tamarona", email = "P.B.Tamarona@tudelft.nl"}
]

[urls]
Repository = "https://github.com/PBTamarona/OpenPyTEA"
Issues = "https://github.com/PBTamarona/OpenPyTEA/issues"

[project.optional-dependencies]
ipython = [
    "ipython==9.6.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv_build]
package-data = {"openpytea" = ["data/*.csv"]}
